# math

./: CMakeLists.txt  README.md  libraries_list.txt
include/math/: camera.h  dimension.h  mat4.h  matrix.h  projection_matrix.h  transform.h  vec3.h  vec4.h  vector.h
src/: camera.cpp  dimension.cpp  mat4.cpp  projection_matrix.cpp  transform.cpp  vec3.cpp  vec4.cpp
test/: test_matrix.cpp  test_matrix_glm.cpp  test_vector.cpp
